# ChangeLog for gnome-base/gvfs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gvfs/ChangeLog,v 1.221 2013/08/03 09:45:40 mgorny Exp $

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> gvfs-1.16.2.ebuild,
  gvfs-1.16.3.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

*gvfs-1.16.3 (14 Jun 2013)

  14 Jun 2013; Pacho Ramos <pacho@gentoo.org> +gvfs-1.16.3.ebuild,
  -gvfs-1.16.1.ebuild:
  Version bump, drop old

*gvfs-1.16.2 (26 May 2013)

  26 May 2013; Pacho Ramos <pacho@gentoo.org> +gvfs-1.16.2.ebuild:
  Version bump

  11 May 2013; Samuli Suominen <ssuominen@gentoo.org> gvfs-1.14.2.ebuild,
  gvfs-1.16.1.ebuild:
  Use subslot operator for the libplist and libimobiledevice dependencies.

  05 May 2013; Justin Lecher <jlec@gentoo.org> gvfs-1.14.2.ebuild,
  gvfs-1.16.1.ebuild:
  Fix obsolete macros to work with automake-1.13, #468660

  28 Apr 2013; Pacho Ramos <pacho@gentoo.org> -gvfs-1.16.0.ebuild,
  gvfs-1.16.1.ebuild:
  Fix deps (reported by shiznix via IRC)

*gvfs-1.16.1 (25 Apr 2013)

  25 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gvfs-1.16.1.ebuild,
  -gvfs-1.12.3.ebuild:
  Version bump, rely on libgcrypt.m4 provided by libgcrypt to be sure we use
  latest upstream file, drop expose archive backend changes as upstream
  disagrees with its utility
  (https://bugzilla.gnome.org/show_bug.cgi?id=602147#c9) and me too. Drop old.

  09 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gvfs-1.12.3-r1.ebuild:
  Stable for sh, wrt bug #458984

  07 Apr 2013; Pacho Ramos <pacho@gentoo.org> gvfs-1.16.0.ebuild:
  Fix libsoup deps

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gvfs-1.12.3-r1.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> gvfs-1.12.3-r1.ebuild:
  Stable for alpha, wrt bug #458984

  31 Mar 2013; Pacho Ramos <pacho@gentoo.org> gvfs-1.16.0.ebuild:
  Adapt to libsoup-2.42 dropping gnome USE and splitting (#463702)
