@@ -14,26 +14,18 @@ DIST gvfs-1.16.3.tar.xz 1493048 SHA256 02a4483d0dd2e307f58f8e1d34dd29dbe06d3a345
 DIST libgcrypt.m4.bz2 1526 SHA256 ce9d04f9cbd5417e4d4ba91095c06cea4852c70d75716311e82dfc243d2f0128 SHA512 fe7916d01efb1d14c4d84ed37f3b53b04d3b005cb04b603bded8d24e147fe69a4c0823164483dba3bc95cf540eaf93a0c0ad59f29f8e1edbae9566a81be5900d WHIRLPOOL 6baa8ed005a691fb1f31ac420d801d20a1611519a38749718dcf3956557f40a058c24b988d20534a62084fadd4141c44893cfa751ebf8011cf55d83c759868dd
 EBUILD gvfs-1.12.3-r1.ebuild 3361 SHA256 d7dec2b44edda8d1f96026583b737539b328dc6aee9a99e50b3f2d87ffdede9c SHA512 ebdd5ed06ad17c47666d51d993ff7d5b00ba42335756f2ad75ab0962d0e3174d6472439171221f7e5442b98a8ac7a70610c1d54dd09d6eb06d7d4a03f1047116 WHIRLPOOL 4a59239fed3d82ad2940547584e64d4e41229edfb54e7984177529939fa19b4af8ac76b130d2637e5178028e4be8530a635cf19035e9bf4b6b5c970369328c74
 EBUILD gvfs-1.14.2.ebuild 3895 SHA256 97e2c23271679993f190e4ee679f6f7acc29631c8842f50002b61ed20c9f52e7 SHA512 99c3e93b995059842e8d0a968a455078ed410f458de52033ee6dfde389f999b320d36474d6b0769172bcc2551e002d524099dcab72a76da8c141774e738c39f2 WHIRLPOOL 71f10146264911ca4d33a75548bc2f1fd4ff082b17846c2ea8b93b16d8cc3859a50b199b424b03fcb705dc74b4f0229990bb9ccc63a7bd7f97542a074357c1f4
-EBUILD gvfs-1.16.2.ebuild 3642 SHA256 e8daaa593970663a643d97be1c70d3cd7f7f55d829e52179c9f8864540c9edbd SHA512 b404eab196347bd79b067ce582a1dbf1f7067183d3cca69c638cbaf463a078652c081ff411a5b5da392585992e06c0ceeb7273dab66f99d71cc9f608f757dab7 WHIRLPOOL b6769ded6d9165731dccfcd65bc75d34782665654ce9e6410b3eee8a67c0ec8c18487125e6863f697a269043e264ecaa98ece3dbdafb70d65fd16a9cfed6c7f0
-EBUILD gvfs-1.16.3.ebuild 3642 SHA256 8d5dc1a19b10a99097e85f8569cccf39db6b1a0f02fb41a3b774695530b2cb67 SHA512 c0d85cf9bbdb930ef32685350e7ca35a861cb511e069ced68f0c1135c77855865492e93e3de987751e6ebf5b56a0fdfa7f558a14d6be09a08b6b629cd9e7df4a WHIRLPOOL b6619f200baf6e23055d678a09cd5ea64ca7dd5d2981c81ea40b4090cf1fa6693b3b98d08003ce711a85af1f970e52411a8410828105ff4328d144efcf3a7218
-MISC ChangeLog 31684 SHA256 47d5b45284d861d40b896dcca37bece23cad405c67dddf4e6a9a0fb43f27d423 SHA512 7fab45a019a2e46b04cd78c9ca1326f5c09b01540ade31d068b8491aeea43b32379445a14cfd4c6503b23ef17b509444a8d44db9e4a79542caec4e35daff43b9 WHIRLPOOL 71a59ecc1df4d5eb66f4334d881ede71eead5b0ec60f149558e829ec65708adde23118ee1310a2297788548125bb3f1ea567037435d5079e91ea631a64205a0f
+EBUILD gvfs-1.16.2.ebuild 3649 SHA256 b06b420da47cfa1992ed1f3bc5668004fb3f1362a179a905053a87beb294b906 SHA512 453f02e2eef8df2ace8ba3cf25118560aa35a8b2afddac77a466028289ad34ea62a9bd8569a5451e087899ea97d1f87d92d683b90545f2e26aa65053ef9a1a41 WHIRLPOOL 140d2f251956263934ed648f99e9d6acf399aa121fde401944854a2d017e3a425d695adfb5b3d47d8a242cfbe254df9fd5827a03b7ac89ea875ef1c65580ca05
+EBUILD gvfs-1.16.3.ebuild 3649 SHA256 2d28dd88dd435dcb30f205feb895318c547deeff857e7448e53967e1dd2c0e9b SHA512 b85046a2b1b7ee3376cf2ac3433b00db77b9415acdee9e838b0832e2aa4e73aad7918dc58dc2968f47c1413bc8618eec78b199c884d0233818d9c6e701fedc77 WHIRLPOOL 68f42d930d03c1245ef96792185e6eaf726eb925a8304a2831b64e9bbb532a969ce3472c921015a47b01bbb3b3d501b5165db7674dcfae86e2016e017ad069f7
+MISC ChangeLog 32036 SHA256 ffba8e9b2da57c888f0b5c3ef0aa5924134420668cb83b68e7980f884d28b89d SHA512 c2c5757ec514c50024fedf2c121b2a67b05f089f6e4f0e421816f3f561367802a29675e6a091bc4c541f9720c355903ebbcb41d7b0d47f5e322e1658cef6e558 WHIRLPOOL 445b9c8a92c1618099bc84fdaa445ade5206b4ee496f39c8d5ed840ee7cb2baa5c0395e1eb4963fc484de7236b015a2cba7e4a359cb373cc536f0d1f6727ca0d
 MISC metadata.xml 1440 SHA256 a02bc760008f281e624b5bb457002578368cbd4a6cd6c0022a8e6e7e7dda9603 SHA512 93e1c99b3108f240d9543a22c9ef67a1ab6baaa25d99bbe721d6fcba7e939b40bacabe727310d2ecda1200e3612c88a7245c55dfb2a3e25ef5afc20b69b59863 WHIRLPOOL 6c3357fadeba19ff338ece726468464973b74a37b40aeba8925ccf6eba41b46d8e2c62bfca58d4b7f83138df248cd4c0ccee418b66ab374d8eef045ba21d0717
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJR/NGkXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGRDhEM0MyMERDMzNBMkYzQzJFRTI3QjE5
-NjI3RjQ1NkY5REE3NjQzAAoJEJYn9Fb52nZD4OsQAIFTVxHUal/RSWuboCv6m9wm
-MgzmRJGOjiWBBBcbCfnoPWpkOo7TnRDGaNKN0hZDK75T3qFv9gm5V5gIlQyPx90x
-Me/NswJF6gvZwxV+Z02PVWRLKtgU56ZI1e3EC40TJvDoUaCBdb1ZQe+NuXaE7NsN
-3KFu7BaNpBbWVbNIxoIsqZgD8E/irzIeLd26jYzBrDKxde2DO8m6gg2g1GlBNpKw
-OtNJxp3NC2SX/iM9uW6nx1wQn/h7Lk0756auTMdRcRHRWBp/PbvpORCMwbICxqC5
-a3v77vzrAIjYkWAt8lBbk1JRebTA5Efri7cFT2NNX85w8LJij1zS4OqHppPansWL
-ZNcRDgSbnWaF0KxN5FiXEFkHGT6JxwLMluOAWyHPQjZniFixZC1lv1N0nDlQehRp
-i+YVSLLmwxTrmRGTsUQI7Q9v6opFVOMp9TGvD/nQigVr3bPcg/qGyTGWHEAzbeoX
-v8JwghdyVkyq8CS2z1SGFwZ7hgo3Peeab7aYDmV2XyL6+JWyLnp9luk+MWGHLWVM
-UIkSBfrSvqyjotHgB08zyDj6C95UlwCvdRvLlfQHkFSqz0rlTYqBnpJz/TeM13sx
-dq2exB8cw+aO0IS4Qg1e/Qo770yqhB4nuDVDdLII5+R3YcrSNlNl1iPXw3zAb5wU
-Sj1Mmj7noUKJ9AghVJ2e
-=4OG/
+iQEcBAEBCAAGBQJSH0QxAAoJEEdUh39IaPFNdgEH/1PjtqPutsqnuqzffvbsCtzl
+aAy37nRihaxlaUrhqW62JcIw8da0d3mEp8iJz/Rt9RwDrBmnkrnPAHaiuRjVAEI+
+8uQzZ4dlyogHSGs+f6tiU+yyeCezwvIunD71wrVhVu+6qhZk+eUJ32JBzA79Z893
+tFOd0GnI1NkRcClMkLEJbvllGcGZmHqsn5ndW4BTGMJ2oKqlfXuo8G7P8ZWrrDHz
++43+2BFLr3SWVVy0Uz0aHwieSURN+OnEVTgEEtYhAi8qyQPr0Qjvaq97lDdA4Z/Y
+XucBzcte3545qOdDCY0xEW3zlr5E0D8vl5O1O8fIHCC03wzkcXbL4idM3/013W0=
+=l1I5
 -----END PGP SIGNATURE-----
