@@ -7,9 +7,9 @@ IUSE=afp archive avahi bluetooth bluray cdda fuse gdu gnome-keyring gnome-online
 KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~sparc-solaris ~x86-solaris
 LICENSE=LGPL-2+
 RDEPEND=>=dev-libs/glib-2.35:2 sys-apps/dbus dev-libs/libxml2:2 net-misc/openssh afp? ( >=dev-libs/libgcrypt-1.2.2:= ) archive? ( app-arch/libarchive:= ) avahi? ( >=net-dns/avahi-0.6 ) bluetooth? ( >=app-mobilephone/obex-data-server-0.4.5 dev-libs/dbus-glib net-wireless/bluez dev-libs/expat ) bluray? ( media-libs/libbluray ) fuse? ( >=sys-fs/fuse-2.8.0 ) gdu? ( || ( >=gnome-base/libgdu-3.0.2 =sys-apps/gnome-disk-utility-3.0.2-r300 =sys-apps/gnome-disk-utility-3.0.2-r200 ) ) gnome-keyring? ( app-crypt/libsecret ) gphoto2? ( >=media-libs/libgphoto2-2.4.7:= ) gtk? ( >=x11-libs/gtk+-3.0:3 ) http? ( || ( >=net-libs/libsoup-2.42:2.4 >=net-libs/libsoup-gnome-2.34.0 ) ) ios? ( >=app-pda/libimobiledevice-1.1.0:= >=app-pda/libplist-1:= ) mtp? ( >=media-libs/libmtp-1.1.5 ) samba? ( >=net-fs/samba-3.4.6[smbclient] ) systemd? ( sys-apps/systemd ) udev? ( cdda? ( || ( dev-libs/libcdio-paranoia <dev-libs/libcdio-0.90[-minimal] ) ) virtual/udev[gudev] ) udisks? ( >=sys-fs/udisks-1.97:2 ) gnome-online-accounts? ( >=net-libs/gnome-online-accounts-3.7.1 )
-REQUIRED_USE=cdda? ( udev )
+REQUIRED_USE=cdda? ( udev ) udisks? ( udev ) systemd? ( udisks )
 RESTRICT=test
 SLOT=0
 SRC_URI=mirror://gnome/sources/gvfs/1.16/gvfs-1.16.2.tar.xz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	bash-completion-r1	cccf36bdb93b54baafea3b9d97abb0bf	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	7976d3f4d0c0816c67033d3dcd4d9472	gnome2-utils	794d2847b4af390a1e020924876c8297	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=85c5cb5c3a84086aee2b93826110efd5
+_md5_=ec1a7ef8e42bb8b813c832f579ab1744
