@@ -4,10 +4,10 @@ DESCRIPTION=FTP client with lots of useful features and an intuitive interface
 EAPI=5
 HOMEPAGE=http://filezilla-project.org/
 IUSE=aqua dbus nls test
-KEYWORDS=~amd64 ~arm ~ia64 ~ppc ~sparc ~x86 ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos
+KEYWORDS=amd64 ~arm ~ia64 ~ppc ~sparc x86 ~amd64-linux ~ia64-linux ~x86-linux ~x86-macos
 LICENSE=GPL-2
 RDEPEND=>=app-admin/eselect-wxwidgets-0.7-r1 >=dev-db/sqlite-3.7 >=dev-libs/tinyxml-2.6.1-r1[stl] net-dns/libidn >=net-libs/gnutls-2.8.3 aqua? ( >=x11-libs/wxGTK-2.8.12:2.8[aqua] ) !aqua? ( >=x11-libs/wxGTK-2.8.12:2.8[X] x11-misc/xdg-utils ) dbus? ( sys-apps/dbus )
 SLOT=0
 SRC_URI=mirror://sourceforge/filezilla/FileZilla_3.7.3_src.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	wxwidgets	3315ffba81a98dea5d9837edb418a587
-_md5_=27cccfc0b75a3f4e780f77691f07cf0a
+_md5_=fcc32dcc6f7b7d59deab4dd5d5104542
