@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/filezilla
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.107 2013/08/09 08:07:06 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.108 2013/08/29 12:57:40 pinkbyte Exp $
+
+  29 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> filezilla-3.7.3.ebuild:
+  Stable on amd64 and x86, wrt bug #482672
 
 *filezilla-3.7.3 (09 Aug 2013)
 
